fix: Aligned fixed in Mainarticle img

--- a/src/styles/mainarticle.css
+++ b/src/styles/mainarticle.css
@@ -8,8 +8,9 @@
 
 .hs-main-article-thumb{
     display: flex;
+    justify-content: center;
     max-width: 100%;
-    max-height: 100%
+    max-height: 100%;
 }
 
 
